--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,8 +6,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Black.woff2') format('woff2'),
-      url('FiraSans-Black.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Black.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -15,8 +15,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Bold.woff2') format('woff2'),
-      url('FiraSans-Bold.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Bold.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -24,8 +24,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-BlackItalic.woff2') format('woff2'),
-      url('FiraSans-BlackItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-BlackItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-BlackItalic.woff') format('woff');
   font-weight: 900;
   font-style: italic;
   font-display: swap;
@@ -33,8 +33,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-ExtraBold.woff2') format('woff2'),
-      url('FiraSans-ExtraBold.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-ExtraBold.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-ExtraBold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -42,8 +42,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-BoldItalic.woff2') format('woff2'),
-      url('FiraSans-BoldItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-BoldItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -51,8 +51,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-ExtraLight.woff2') format('woff2'),
-      url('FiraSans-ExtraLight.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-ExtraLight.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-ExtraLight.woff') format('woff');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -60,8 +60,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-ExtraBoldItalic.woff2') format('woff2'),
-      url('FiraSans-ExtraBoldItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-ExtraBoldItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-ExtraBoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -69,8 +69,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Italic.woff2') format('woff2'),
-      url('FiraSans-Italic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Italic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -78,8 +78,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-ExtraLightItalic.woff2') format('woff2'),
-      url('FiraSans-ExtraLightItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-ExtraLightItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-ExtraLightItalic.woff') format('woff');
   font-weight: 200;
   font-style: italic;
   font-display: swap;
@@ -87,8 +87,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Light.woff2') format('woff2'),
-      url('FiraSans-Light.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Light.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -96,8 +96,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Medium.woff2') format('woff2'),
-      url('FiraSans-Medium.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Medium.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -105,8 +105,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-LightItalic.woff2') format('woff2'),
-      url('FiraSans-LightItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-LightItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-LightItalic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -114,8 +114,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-MediumItalic.woff2') format('woff2'),
-      url('FiraSans-MediumItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-MediumItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-MediumItalic.woff') format('woff');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
@@ -123,8 +123,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Regular.woff2') format('woff2'),
-      url('FiraSans-Regular.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Regular.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -132,8 +132,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-SemiBold.woff2') format('woff2'),
-      url('FiraSans-SemiBold.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-SemiBold.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -141,8 +141,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-SemiBoldItalic.woff2') format('woff2'),
-      url('FiraSans-SemiBoldItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-SemiBoldItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-SemiBoldItalic.woff') format('woff');
   font-weight: 600;
   font-style: italic;
   font-display: swap;
@@ -150,8 +150,8 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-Thin.woff2') format('woff2'),
-      url('FiraSans-Thin.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-Thin.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -159,9 +159,313 @@
 
 @font-face {
   font-family: 'Fira Sans';
-  src: url('FiraSans-ThinItalic.woff2') format('woff2'),
-      url('FiraSans-ThinItalic.woff') format('woff');
+  src: url('../fonts/Fira_Sans/FiraSans-ThinItalic.woff2') format('woff2'),
+      url('../fonts/Fira_Sans/FiraSans-ThinItalic.woff') format('woff');
   font-weight: 100;
   font-style: italic;
   font-display: swap;
+}
+
+/*
+---------------------------
+  ROOT
+---------------------------
+*/
+
+:root {
+  --red: hsl(0, 78.9%, 57.25%);
+  --black: hsl(0, 0%, 0%);
+  --beige: hsl(30.64, 49.47%, 81.37%);
+  --white: hsl(0, 0%, 100%);
+  --dark-red: hsl(350, 62%, 32%);
+}
+
+/*
+---------------------------
+  TAGS
+---------------------------
+*/
+
+body {
+  position: relative;
+  background-color: var(--black);
+  font-family: 'Fira Sans';
+  color: var(--white);
+}
+
+a {
+  text-decoration: none;
+  color: var(--white);
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  height: 160px;
+}
+
+.logo-container img {
+  filter: invert(100%) sepia(3%) saturate(2592%) hue-rotate(258deg) brightness(118%) contrast(100%);
+  margin-right: 1rem;
+  width: 12.5rem;
+}
+
+nav ul {
+  display: flex;
+  gap: 2rem;
+}
+
+nav ul li {
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+#header-left,
+#header-right ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+#header-right ul li {
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+main {
+  background-color: var(--black);
+}
+
+.language-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.language-section:hover span,
+.language-section:hover svg,
+.search-icon--header:hover,
+.hamburger-icon--header:hover {
+  cursor: pointer;
+  color: var(--dark-red);
+}
+
+.chevron-icon--header,
+.search-icon--header {
+  color: var(--white);
+  width: 1rem;
+}
+
+.hamburger-icon--header {
+  margin-left: 1rem;
+  color: var(--white);
+  width: 3rem;
+}
+
+.mr-3rem {
+  margin-right: 3rem;
+}
+
+/*
+---------------------------
+  HAMBURGER
+---------------------------
+*/
+
+#hamburger-menu {
+  display: flex;
+  position: fixed;
+  transform: scale(0);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  transition: 0.2s ease;
+}
+
+#hamburger-menu.active {
+  transform: scale(1);
+}
+
+#hamburger-menu.active * {
+  color: var(--black);
+}
+
+#hamburger-menu nav ul li:hover a,
+#hamburger-right .language-section:hover span,
+#hamburger-right .language-section:hover svg path,
+#hamburger-right .search-icon--header:hover path,
+.hamburger-icon-close:hover path {
+  cursor: pointer;
+  color: var(--white);
+  fill: var(--white);
+}
+
+#hamburger-left {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--red);
+  padding: 2rem;
+  gap: 3rem;
+  width: 60vw;
+}
+
+#hamburger-left .logo-container img {
+  filter: invert(0%) sepia(3%) saturate(0%) hue-rotate(226deg) brightness(104%) contrast(103%);
+  width: 200px;
+}
+
+#hamburger-left ul {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+#hamburger-right {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--beige);
+  flex-grow: 1;
+}
+
+#hamburger-right ul {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  list-style-type: none;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.hamburger-icon-close {
+  width: 3rem;
+}
+
+#hamburger-right .campaign-logo-container {
+  align-self: center;
+}
+
+.campaign-logo-container {
+  width: 30vw;
+}
+
+/*
+---------------------------
+  HERO
+---------------------------
+*/
+
+#hero-wrapper {
+  position: relative;
+}
+
+#hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: var(--beige);
+  color: var(--black);
+  width: 100%;
+  height: calc(100vh - 10rem);
+}
+
+.hero-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -2.5rem;
+  right: 3rem;
+  background-color: var(--red);
+  border-radius: 50%;
+  min-width: 8rem;
+  min-height: 8rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+  color: var(--black);
+}
+
+#hero .campaign-logo-container {
+  min-width: 30rem;
+  width: 35vw;
+  max-height: 100%;
+}
+
+.hero-dates {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.hero-today {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  text-align: end;
+}
+
+.hero-today strong {
+  font-size: 1.5rem;
+}
+
+.hero-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.hero-day:nth-child(3),
+.hero-day:nth-child(4),
+.hero-day:nth-child(5) {
+  grid-row-start: 2;
+}
+
+.hero-day:nth-child(6),
+.hero-day:nth-child(7),
+.hero-day:nth-child(8) {
+  grid-row-start: 3;
+}
+
+.hero-day:nth-child(9),
+.hero-day:nth-child(10) {
+  grid-row-start: 4;
+}
+
+.hero-day:nth-child(9) {
+  grid-column-start: 2;
+}
+
+.hero-day:nth-child(10) {
+  grid-column-start: 3;
+}
+
+
+.hero-day {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  border: 1px solid var(--beige);
+  background-color: var(--red);
+  width: 7rem;
+  padding: 1rem;
+}
+
+.hero-day strong {
+  font-size: 1.3rem;
 }
